--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
   <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1167171505998811176/1167258473705246760/c66ae0299b7437710cb5bf905514eee7.webp"/>
 
-  <meta property="og:title" content="blank" />
+  <meta property="og:title" content="Nigx is my dad" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og.image" content="" />
