--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1167171505998811176/1167245560789614742/x2mate.com-Punchmade_Dev_-_I_Scammed_New_York_Feat._Sha_Ek_Official_Music_Video-1080p.mp4" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1166834739408289844/1169296702512046261/x2mate.com-Punchmade_Dev_-_How_To_Press_A_Pill_Official_Music_Video-1080p.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
