--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1167171505998811176/1167258473705246760/c66ae0299b7437710cb5bf905514eee7.webp"/>
+  <link rel="shortcut icon" type="image/jpg" href="https://images-ext-2.discordapp.net/external/aIGEHfoYmIy2WvkRdO-SLxuWVt7rxs7B1LNZMF88oog/%3Fsize%3D4096/https/cdn.discordapp.com/avatars/809975522867412994/f0f730200da284ba0d081038fb6163e4.webp"/>
 
   <meta property="og:title" content="Nigx is my dad" />
   <meta property="og:type" content="website" />
