--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://images-ext-2.discordapp.net/external/aIGEHfoYmIy2WvkRdO-SLxuWVt7rxs7B1LNZMF88oog/%3Fsize%3D4096/https/cdn.discordapp.com/avatars/809975522867412994/f0f730200da284ba0d081038fb6163e4.webp"/>
+  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1171559266528788530/1171559818125918338/image.png?ex=655d1f1b&is=654aaa1b&hm=dddf09fc846cdd4b723e89d9cc584f2544e7401fae0e1184c7dca4be6c639aa2&="/>
 
   <meta property="og:title" content="Nigx is my dad" />
   <meta property="og:type" content="website" />
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1166834739408289844/1169296702512046261/x2mate.com-Punchmade_Dev_-_How_To_Press_A_Pill_Official_Music_Video-1080p.mp4" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1171559266528788530/1171559351413112872/Mo_Kartii_X_JayBucks_X_Lil_Worm_-_Poke_14_Remix_Official_Music_Video.mp4?ex=655d1eab&is=654aa9ab&hm=b37770dc9ca0b1ac7449e41e151d2c54413ccfffda86f17dc2827c302db17e0d&" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
@@ -85,12 +85,12 @@
             <div class='animate__animated animate__fadeInDown'>
               <div class='center'>
                 <div class='hero-img'>
-                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1167171505998811176/1167258473705246760/c66ae0299b7437710cb5bf905514eee7.webp?ex=654d792a&is=653b042a&hm=fa37b82a9aeead40711fe800bb5a220d5de22eea2c8ce29ff7cf0f0387c1a4c7&=&width=396&height=396'></i>
+                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1171559266528788530/1171559818125918338/image.png?ex=655d1f1b&is=654aaa1b&hm=dddf09fc846cdd4b723e89d9cc584f2544e7401fae0e1184c7dca4be6c639aa2&='></i>
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/extorrted" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.com/invite/crystalstock" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://discord.com/invite/kiwiware" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 <a href="https://instagram.com/realprofits_" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 <a href="https://youtube.com/@realprofitz" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
