--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1171559266528788530/1171559351413112872/Mo_Kartii_X_JayBucks_X_Lil_Worm_-_Poke_14_Remix_Official_Music_Video.mp4?ex=655d1eab&is=654aa9ab&hm=b37770dc9ca0b1ac7449e41e151d2c54413ccfffda86f17dc2827c302db17e0d&" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1171559266528788530/1171561594434617425/Y2meta.app-Mo_Kartii_X_JayBucks_X_Lil_Worm_-_Poke_14_Remix_Official_Music_Video-1080p.mp4?ex=655d20c2&is=654aabc2&hm=8703afc3f82d030e73366aeb51fea31f8e8ea65aaee25dd34d10b06c03f3ce73&" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
