--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1171559266528788530/1171559818125918338/image.png?ex=655d1f1b&is=654aaa1b&hm=dddf09fc846cdd4b723e89d9cc584f2544e7401fae0e1184c7dca4be6c639aa2&="/>
+  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1177702243538063360/1179157010390982656/e09f00af3e2f7ed71df7970c8a850561.webp"/>
 
   <meta property="og:title" content="Nigx is my dad" />
   <meta property="og:type" content="website" />
@@ -85,7 +85,7 @@
             <div class='animate__animated animate__fadeInDown'>
               <div class='center'>
                 <div class='hero-img'>
-                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1171559266528788530/1171559818125918338/image.png?ex=655d1f1b&is=654aaa1b&hm=dddf09fc846cdd4b723e89d9cc584f2544e7401fae0e1184c7dca4be6c639aa2&='></i>
+                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1177702243538063360/1179157010390982656/e09f00af3e2f7ed71df7970c8a850561.webp'></i>
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
