--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
   <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1177702243538063360/1179157010390982656/e09f00af3e2f7ed71df7970c8a850561.webp"/>
 
-  <meta property="og:title" content="Nigx is my dad" />
+  <meta property="og:title" content="efraud" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og.image" content="" />
