--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/extorrted" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
 <a href="https://discord.com/invite/maltaservices" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
-<a href="https://instagram.com/realprofits_" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
+<a href="https://instagram.com/litecoinstealer" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 <a href="https://youtube.com/@realprofitz" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
                   <br>
