--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/extorrted" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.com/invite/maltaservices" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://discord.gg/HSPqqmsw" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 <a href="https://instagram.com/litecoinstealer" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-<a href="https://youtube.com/@realprofitz" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
+<a href="https://youtube.com/@profitsyt" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
                   <br>
                   <span class="span-off"></span>
