--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <script src="./assets/particles.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <div id="preload">
-    <h2><font color="#959fb4">click to enter</h2>
+    <h2><font color="#959fb4">click me <3</h2>
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
