--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1177702243538063360/1179157010390982656/e09f00af3e2f7ed71df7970c8a850561.webp"/>
+  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1207499573866528811/1210725702878371870/b0b211343c53a5015791466d8b923780.webp?ex=65eb9b2d&is=65d9262d&hm=36e3f5686ce06a92dfa3743afc3c956c498f9a03e314ed98485b36eb6dc9a842&=&format=webp"/>
 
   <meta property="og:title" content="efraud" />
   <meta property="og:type" content="website" />
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1197606768491114519/1198053230542856212/x2mate.com-Say_Drilly_x_E-Wuu_x_Nesty_Floxks_x_Lee_Drilly_-_Deadly_Official_Music_Video_Shot_By_Borleone-1080p.mp4?ex=65bd8104&is=65ab0c04&hm=e7b67b486da3580207a4e1c2f44b52c13b05cbedf2957efb3c99d97c8b79bbcc&" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1207499573866528811/1210728012476321892/y2mate.is_-_Punchmade_Dev_I_Love_Scams_Official_Music_Video_-J4eH4Jk6vrk-1080pp-1708730366.mp4?ex=65eb9d54&is=65d92854&hm=fd4954d27b4cca2f8e0e1ecf69bdccb211a676e962d3e3bf6920b61866e0608c&" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
@@ -90,7 +90,7 @@
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/climer" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.gg/autoex" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://discord.gg/auramm" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 <a href="https://instagram.com/zzprofits" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 <a href="https://youtube.com/@profitsyt" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
