--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class='animate__animated animate__fadeInDown'>
               <div class='center'>
                 <div class='hero-img'>
-                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1177702243538063360/1179157010390982656/e09f00af3e2f7ed71df7970c8a850561.webp'></i>
+                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1207499573866528811/1210725702878371870/b0b211343c53a5015791466d8b923780.webp?ex=65eb9b2d&is=65d9262d&hm=36e3f5686ce06a92dfa3743afc3c956c498f9a03e314ed98485b36eb6dc9a842&=&format=webp'></i>
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
