--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1207499573866528811/1210728012476321892/y2mate.is_-_Punchmade_Dev_I_Love_Scams_Official_Music_Video_-J4eH4Jk6vrk-1080pp-1708730366.mp4?ex=65eb9d54&is=65d92854&hm=fd4954d27b4cca2f8e0e1ecf69bdccb211a676e962d3e3bf6920b61866e0608c&" type="video/mp4">
+        <source src="https://cdn.discordapp.com/attachments/1216505813833613325/1216507832883613816/Punchmade_Dev_-_Famous_Scammer_Official_Music_Video.mp4?ex=6600a434&is=65ee2f34&hm=b18e572a81ca49506f066e9bd44be98a030bcea374adccd1a51d4dba8b39e2c7&" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
