--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/climer" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.gg/auramm" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://discord.gg/autos" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 <a href="https://instagram.com/zzprofits" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
 <a href="https://youtube.com/@profitsyt" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
