--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/climer" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.gg/uJeCSxrSZt" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://amitermed.com/g4DffQ" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 
                   <br>
                   <span class="span-off"></span>
