--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1257083778107572298/1259270539298738186/165de007e38505cdef3e4976a642dad0.webp?ex=668b1294&is=6689c114&hm=7bf0241c18e7c818d85b0ab757040442122248e972429c749d05a600231b655e&=&format=webp"/>
+  <link rel="shortcut icon" type="image/jpg" href="https://cdn.discordapp.com/avatars/1259973696446136323/21cbc562799d17f3a906f03f1749b537?size=1024"/>
 
   <meta property="og:title" content="efraud" />
   <meta property="og:type" content="website" />
@@ -85,12 +85,12 @@
             <div class='animate__animated animate__fadeInDown'>
               <div class='center'>
                 <div class='hero-img'>
-                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1257083778107572298/1259270539298738186/165de007e38505cdef3e4976a642dad0.webp?ex=668b1294&is=6689c114&hm=7bf0241c18e7c818d85b0ab757040442122248e972429c749d05a600231b655e&=&format=webp'></i>
+                  <i><img style="width: 100px; height: 100px;" src='https://cdn.discordapp.com/avatars/1259973696446136323/21cbc562799d17f3a906f03f1749b537?size=1024'></i>
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
 <a href="https://t.me/climer" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://amitermed.com/g4DffQ" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
+<a href="https://discord.gg/cheapmm2" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 
                   <br>
                   <span class="span-off"></span>
