--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
   <link rel="shortcut icon" type="image/jpg" href="https://cdn.discordapp.com/avatars/1259973696446136323/21cbc562799d17f3a906f03f1749b537?size=1024"/>
 
-  <meta property="og:title" content="efraud" />
+  <meta property="og:title" content="profits" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="" />
   <meta property="og.image" content="" />
