--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <audio
   id="music"
   class="music"
-  src="https://cdn.discordapp.com/attachments/1273288981252931669/1274157827899785338/TASTE.mp3"
+  src="https://cdn.discordapp.com/attachments/1273288981252931669/1274157827899785338/TASTE.mp3?ex=66c13b72&is=66bfe9f2&hm=a3da2d726c60d1baccfdac49b6e49f9320b20cb1f2491f93ee83d37f4bb5ccf5&"
   autoplay
   loop
   muted
