--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
-                  <a href="https://t.me/climer" target="_blank"><img src="./telegram.png" class="icons"><i class="fab fa-telegram" aria-hidden="true"></i></a>
+                  <a href="https://t.me/climer" target="_blank"><img src="./telegram.png" style="width:30px;height:30px;"><i class="fab fa-telegram" aria-hidden="true"></i></a>
                   <a href="https://discord.gg/cheapmm2" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
 
                   <br>
