--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="custom.css" />
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
-  <link rel="shortcut icon" type="image/jpg" href="https://media.discordapp.net/attachments/1226663970522533890/1234255319803367445/165de007e38505cdef3e4976a642dad0.webp?ex=66301157&is=662ebfd7&hm=b4ddbdf8062c61b6d6f2ae226a7eb7647c093afe56198955b480081bde137d2c&=&format=webp"/>
+  <link rel="shortcut icon" type="image/jpg" href="https://cdn.discordapp.com/avatars/1259973696446136323/21cbc562799d17f3a906f03f1749b537.png?size=1024"/>
 
   <meta property="og:title" content="efraud" />
   <meta property="og:type" content="website" />
@@ -75,7 +75,7 @@
   </div>
   <div id="hidden">
       <video id="background-video" autoplay loop>
-        <source src="https://cdn.discordapp.com/attachments/1226663970522533890/1234256136903983204/Punchmade_Dev_-_I_Hate_Punchmade_Dev_Official_Music_Video_1080p.mp4?ex=6630121a&is=662ec09a&hm=2a91fb6298c4ceb488219c4c0bb9847b619cfe19af10d7402d7bade2b05a8d99&" type="video/mp4">
+        <source src="" type="video/mp4">
         Your browser does not support the video tag.
       </video>
     <div id="main">
@@ -85,14 +85,10 @@
             <div class='animate__animated animate__fadeInDown'>
               <div class='center'>
                 <div class='hero-img'>
-                  <i><img style="width: 100px; height: 100px;" src='https://media.discordapp.net/attachments/1226663970522533890/1234255319803367445/165de007e38505cdef3e4976a642dad0.webp?ex=66301157&is=662ebfd7&hm=b4ddbdf8062c61b6d6f2ae226a7eb7647c093afe56198955b480081bde137d2c&=&format=webp'></i>
+                  <i><img style="width: 100px; height: 100px;" src='https://cdn.discordapp.com/avatars/1259973696446136323/21cbc562799d17f3a906f03f1749b537.png?size=1024'></i>
                 </div>
                 <div class='hero-text'>
                   <h1 class="clickable-text" id="speaker-effect">profits</h1>
-<a href="https://t.me/climer" target="_blank"><i class="fab fa-telegram" aria-hidden="true"></i></a>
-<a href="https://discord.gg/autos" target="_blank"><i class="fab fa-discord" aria-hidden="true"></i></a>
-<a href="https://instagram.com/zzprofits" target="_blank"><i class="fab fa-instagram" aria-hidden="true"></i></a>
-<a href="https://youtube.com/@profitsyt" target="_blank"><i class="fab fa-youtube" aria-hidden="true"></i></a>
 
                   <br>
                   <span class="span-off"></span>
@@ -115,7 +111,7 @@
 <audio
   id="music"
   class="music"
-  src="https://cdn.discordapp.com/attachments/1167171505998811176/1167249848588845136/punchmade.mp3"
+  src="https://cdn.discordapp.com/attachments/1273288981252931669/1274157827899785338/TASTE.mp3?ex=66c1e432&is=66c092b2&hm=3d74ec12b06e6a3628d6d3656606baba22768facd3a2e063164f73d3a379b85f&"
   autoplay
   loop
   muted
